# Specs.cpp

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Class Design.h  DSL.txt  Doxyfile  EventLoop.cpp  IDEA.cpp  LICENSE  README.md  SYNTAX.md  SYNTAX_REFERENCE.md  TODO.md  ____SpecController.h  example.lua  use_library.cpp  use_module.cpp  vcpkg-configuration.json  vcpkg.json  xmake.lua
Demo/: SpecHelper.h  xmake.lua
Demos/CMake vcpkg Demo/: CMakeLists.txt  CMakePresets.json  DemoSpecs1.cpp
Documentation/: AssertionLibraries.md  CLI.md  CONTRIBUTING.md  CustomSyntax.md  Data.md  DataModel.md  Examples.md  Exceptions.md  GettingStarted.md  GitHub.md  Installation.md  Installing copy.md  Installing.md  LICENSE.md  Macros.md  ProjectLayout.md  QuickStart.md  README.md  Reporters.md  Runners.md  RunningSpecs.md  RunningTests.md  SharedLibraries.md  SyntaxReference.md  Tags.md  Templates.md  TestInfo.md  (+5 more)
spec/: AddSpecsToThisList.cpp  CMakeLists.txt  Specs.cpp
spec-snowhouse/: CMakeLists.txt
spec-snowhouse/example/: CMakeLists.txt  SnowhouseSpecExample.cpp
spec-snowhouse/include/Spec/: Snowhouse.h
spec-snowhouse/include/Spec/Types/ExceptionHandlers/: SnowhouseExceptionHandler.h
spec/Core/: SomeThing.Spec.h
spec/Helpers/: RunHelper.h  SpecHelper.h
spec/example/: Specs.cpp
spec/examples/: CMakeLists.txt  Specs.cpp
spec/examples/Assert/: Assert.Spec.cpp  CMakeLists.txt
spec/examples/DSLs/Core/: CMakeLists.txt  Core.Spec.cpp
spec/include/: Spec.h
spec/include/Spec/: AsyncSpec.h  SpecGroup.h  SpecTest.h
spec/include/Spec/DSL/: BDD.h
spec/include/Spec/DSL/Components/Aliases/: SpecCallback.h
spec/include/Spec/DSL/Components/Functions/: describe.h  it.h  pending.h  setup.h  teardown.h  test.h  todo.h  xit.h
spec/include/Spec/DSL/Components/Macros/: Setup.h  TODO.h  Teardown.h  TestGroup.h  xDescribe.h  xTest.h
spec/include/Spec/Internal/Macros/: RunSpecsMain.h
spec/include/Spec/Types/: ISpecExceptionHandler.h  ISpecReporter.h  ISpecRunner.h  SpecApp.h  SpecDiscovery.h  SpecExtensionsRegistry.h  SpecMain.h  SpecResults.h  SpecTestResult.h  SpecTestResultFailure.h  SpecTestResultStatus.h
spec/include/Spec/Types/ExceptionHandlers/: DefaultExceptionHandler.h
spec/include/Spec/Types/Reporters/: OneLineReporter.h  SimpleReporter.h
spec/include/Spec/Types/Runners/: DefaultRunner.h  SimpleRunner.h
spec/spec/: Spec.h
spec/spec/include/: Autorun.h  TEMP_PRINT.h
spec/spec/include/Types/: ISpecReporter.h  ISpecRunner.h  SpecApp.h  SpecDiscovery.h  SpecResultTest.h  SpecResults.h
spec/spec/include/Types/Reporters/: DocumentationReporter.h
spec/spec/include/Types/Runners/: SimpleRunner.h
spec/specs/: CMakeLists.txt  Spec.Specs.cpp  SpecHelper.h
spec/specs/Runners/DefaultRunner/: AsyncPromises.Spec.h  RunSpecs.Spec.h  SetupAndTeardown.Spec.h
(+1665 files in other folders)
